# ddf

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  MANIFEST.in  README.md  __version__.py  ddf.html  ddf.ini  ddf.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  update.1.py  update2.py
backups/: Dockerfile.edit_dockerfile.auth-server.20250927_002941.backup  docker-compose.yml.edit.20250827_081029.backup  docker-compose.yml.edit.20250827_081556.backup  docker-compose.yml.edit.20250827_081621.backup  docker-compose.yml.edit.20250827_082156.backup  docker-compose.yml.edit.20250827_153440.backup  docker-compose.yml.edit.20250828_171807.backup  docker-compose.yml.edit.20250831_145137.backup  docker-compose.yml.edit.20250831_145207.backup  docker-compose.yml.edit.20250914_175555.backup  docker-compose.yml.edit.20250914_180138.backup  docker-compose.yml.edit.20250914_180712.backup  docker-compose.yml.edit.20250914_182215.backup  docker-compose.yml.edit.20250914_184709.backup  docker-compose.yml.edit.20250914_184827.backup  docker-compose.yml.edit.20250914_185540.backup  docker-compose.yml.edit.20250914_195644.backup  docker-compose.yml.edit.20250914_202315.backup  docker-compose.yml.edit.20250914_205827.backup  docker-compose.yml.edit.20250915_083347.backup  docker-compose.yml.edit.20250915_142112.backup  docker-compose.yml.edit.20250915_142747.backup  docker-compose.yml.edit.20250915_143446.backup  docker-compose.yml.edit.20250915_145954.backup  docker-compose.yml.edit.20250915_150512.backup  docker-compose.yml.edit.20250915_150528.backup  docker-compose.yml.edit.20250915_155707.backup  docker-compose.yml.edit.20250924_142813.backup  docker-compose.yml.edit_service.auth-server.20250926_190313.backup  entrypoint.sh.edit.20250831_130839.backup
bck/: ddf1.py  ddf_1.py
ddf/: __init__.py  __version__.py  cli.py  ddf.ini  ddf.py
docs/: conf.py  configuration.rst  index.rst  installation.rst  license.rst  quickstart.rst  server_mode.rst
docs/_build/doctrees/: backup.doctree  caching.doctree  configuration.doctree  contributing.doctree  environment.pickle  index.doctree  installation.doctree  license.doctree  quickstart.doctree  server_mode.doctree  usage.doctree
docs/_build/doctrees/api/: backup.doctree  cache.doctree  core.doctree  editor.doctree  server.doctree
docs/_build/html/: .buildinfo  backup.html  caching.html  configuration.html  contributing.html  genindex.html  index.html  installation.html  license.html  objects.inv  quickstart.html  search.html  searchindex.js  server_mode.html  usage.html
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/ddf/: ddf.html
docs/_build/html/_sources/: backup.rst.txt  caching.rst.txt  contributing.rst.txt  index.rst.txt  installation.rst.txt  usage.rst.txt
docs/_build/html/_sources/api/: backup.rst.txt  cache.rst.txt  core.rst.txt  editor.rst.txt  server.rst.txt
docs/_build/html/_static/: documentation_options.js
docs/_build/html/api/: backup.html  cache.html  core.html  editor.html  server.html
docs/api/: cache.rst  core.rst  server.rst
