[build-system]
requires = [ "setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2",]
build-backend = "setuptools.build_meta"

[project]
name = "ddf"
description = "Enhanced Docker Compose Tools with caching, server mode, and backup management"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
license-files = [ "LICENSE",]
keywords = [ "docker", "docker-compose", "devops", "container", "management", "yaml",]
classifiers = [ "Development Status :: 4 - Beta", "Intended Audience :: Developers", "Intended Audience :: System Administrators", "Topic :: Software Development :: Build Tools", "Topic :: System :: Systems Administration", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.8", "Programming Language :: Python :: 3.9", "Programming Language :: Python :: 3.10", "Programming Language :: Python :: 3.11", "Programming Language :: Python :: 3.12", "Operating System :: OS Independent", "Environment :: Console",]
dependencies = [ "pyyaml>=6.0", "rich>=13.0.0", "richcolorlog>=0.1.0", "gntplib", "configset>=0.1.0", "rich-argparse>=1.0.0", "clipboard>=0.0.4", "redis>=4.0.0",]
version = "0.37.11"
[[project.authors]]
name = "Hadi Cahyadi"
email = "cumulus13@gmail.com"

[[project.maintainers]]
name = "Hadi Cahyadi"
email = "cumulus13@gmail.com"

[project.optional-dependencies]
cache = [ "pymemcache>=3.5.0",]
server = [ "pystray>=0.19.0", "Pillow>=9.0.0", "plyer>=2.0.0",]
monitoring = [ "watchdog>=2.1.0",]
dev = [ "pytest>=7.0.0", "pytest-cov>=4.0.0", "black>=22.0.0", "flake8>=5.0.0", "mypy>=0.990", "sphinx>=5.0.0", "sphinx-rtd-theme>=1.0.0", "sphinx-autodoc-typehints>=1.19.0",]
all = [ "redis>=4.0.0", "pymemcache>=3.5.0", "pystray>=0.19.0", "Pillow>=9.0.0", "plyer>=2.0.0", "watchdog>=2.1.0",]

[project.urls]
Homepage = "https://github.com/cumulus13/ddf"
Documentation = "https://ddf.readthedocs.io"
Repository = "https://github.com/cumulus13/ddf"
"Bug Tracker" = "https://github.com/cumulus13/ddf/issues"
Changelog = "https://github.com/cumulus13/ddf/blob/main/CHANGELOG.md"

[project.scripts]
ddf = "ddf.cli:main"

[tool.setuptools]
packages = [ "ddf",]

[tool.black]
line-length = 100
target-version = [ "py38", "py39", "py310", "py311", "py312",]
include = "\\.pyi?$"
extend-exclude = "/(\n  # directories\n  \\.eggs\n  | \\.git\n  | \\.hg\n  | \\.mypy_cache\n  | \\.tox\n  | \\.venv\n  | build\n  | dist\n)/\n"

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.setuptools.package-data]
ddf = [ "*.ini", "*.yaml", "*.yml",]

[tool.pytest.ini_options]
testpaths = [ "tests",]
python_files = [ "test_*.py",]
python_classes = [ "Test*",]
python_functions = [ "test_*",]
addopts = "-v --cov=ddf --cov-report=html --cov-report=term"

[tool.coverage.run]
source = [ "ddf",]
omit = [ "*/tests/*", "*/test_*.py", "*/__pycache__/*",]

[tool.coverage.report]
exclude_lines = [ "pragma: no cover", "def __repr__", "raise AssertionError", "raise NotImplementedError", "if __name__ == .__main__.:", "if TYPE_CHECKING:", "if typing.TYPE_CHECKING:",]

[tool.setuptools.dynamic.version]
attr = "__version__.version"
